# thermal_photometric_calibration_Rosbag_version

./: CMakeLists.txt  README.md  irPhotoCalib.cpp  main.cpp
include/: irPhotoCalib.h
